# deep-agents-t1

./: .env.example  .gitignore  README.md  create-learn-skill-plan.md  deepagents_demo_flow.md  deepagents_fasttrack.md  deepagents_learning_notes.md  pyproject.toml
deepagents_demo/: demo_01_basic.py  demo_02_subagents.py  demo_03_skills.py  demo_04_composition.py  demo_05_memory.py  demo_06_permissions.py  demo_07_interrupt_on.py  demo_08_interrupt_primitive.py  demo_09_middleware.py  demo_10_middleware_rewrite.py
deepagents_project/: README.md  learning_assistant.py
deepagents_project/logs/: latest_event_trace.jsonl  latest_run_summary.json
deepagents_project/notes/: learning_journal.md
deepagents_project/skills/mastery-check/: SKILL.md
deepagents_project/skills/teaching-flow/: SKILL.md
deepagents_project/subagent_skills/assessment-rubric/: SKILL.md
deepagents_skills/deepagents-study-coach/: SKILL.md
deepagents_skills/deepagents-study-coach/references/: lesson-checklist.md
deepagents_subagent_skills/research-fact-pack/: SKILL.md
learn-ai-fullstack/: SKILL.md
learn-ai-fullstack/agents/: openai.yaml
learn-ai-fullstack/assets/: learning-plan-template.md  mastery-check-template.md  project-brief-template.md  session-review-template.md
learn-ai-fullstack/references/: mastery-rubric.md  project-ladder.md  roadmap.md  teaching-playbook.md
notes/: today.md
